Fixed styling and spacing with the cards in the gutter

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -42,7 +42,15 @@ h6 {
   flex-direction: column;
   align-items: center;
   background: #ECF0F1;
-  overflow: scroll;
+  overflow: auto;
+}
+
+.gutter-card-container {
+  padding: 30px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main{
@@ -69,4 +77,12 @@ h6 {
   -webkit-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   -moz-box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.bill-card {
+  margin: 5% 2.5%;
+  width: 80%;
+  border-radius: 5px;
+  padding: 32px;
+  background: #fff;
 }
